--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.8"
+    "resize-observer-polyfill": "^1.5.1",
+    "simplebar": "^6.2.1",
+    "styled-components": "^5.3.8",
+    "tcharts.js": "^0.0.4"
   },
   "devDependencies": {
+    "@types/node": "^18.15.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/simplebar": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
